# src/Endpoint/VMware.ScriptRuntimeService.APIGateway/Runspace/IMultiTenantRunspaceProvider.cs
@@ -1,4 +1,4 @@
-﻿// **************************************************************************
+// **************************************************************************
 //  Copyright 2020 VMware, Inc.
 //  SPDX-License-Identifier: Apache-2.0
 // **************************************************************************
@@ -57,7 +57,7 @@ namespace VMware.ScriptRuntimeService.APIGateway.Runspace {
       IRunspaceData Get(string userId, string runspaceId);
 
       /// <summary>
-      /// Removes Runspace 
+      /// Removes Runspace
       /// </summary>
       /// <param name="userId">User identifier</param>
       /// <param name="runspaceId">Runspace id</param>
@@ -74,7 +74,7 @@ namespace VMware.ScriptRuntimeService.APIGateway.Runspace {
       /// Creates a web console
       /// </summary>
       /// <param name="userId">User identifier</param>
-      /// <param name="sessionToken">Authorized session Roken with which create new runspace is requested</param>      
+      /// <param name="sessionToken">Authorized session Roken with which create new runspace is requested</param>
       /// <param name="stsClient">StsClient needed to acquire SAML tokens for connect vc operation, if vc connection script is requested</param>
       /// <param name="vcEndpoint">Vc endpoint to connect to, if vc connection script is requested</param>
       /// <returns></returns>
@@ -85,9 +85,25 @@ namespace VMware.ScriptRuntimeService.APIGateway.Runspace {
          string vcEndpoint);
 
       /// <summary>
+      /// Creates a web console
+      /// </summary>
+      /// <param name="userId">User identifier</param>
+      /// <param name="sessionToken">Authorized session Roken with which create new runspace is requested</param>
+      /// <param name="stsClient">StsClient needed to acquire SAML tokens for connect vc operation, if vc connection script is requested</param>
+      /// <param name="vcEndpoint">Vc endpoint to connect to, if vc connection script is requested</param>
+      /// <param name="wait">Waits till the operation completes</param>
+      /// <returns></returns>
+      IWebConsoleData CreateWebConsole(
+         string userId,
+         ISessionToken sessionToken,
+         ISolutionStsClient stsClient,
+         string vcEndpoint,
+         bool wait);
+
+      /// <summary>
       /// Removes a web console
       /// </summary>
-      /// <param name="userId">User identifier</param>      
+      /// <param name="userId">User identifier</param>
       /// <param name="webConsoleId">Web Console id</param>
       void KillWebConsole(string userId, string webConsoleId);
 
